[package]
name = "ss2env"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["orchestration"]
categories = ["command-line-utilities"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
securestore = "0.100.0"
